--- a/app/src/main/res/layout/activity_register_scan.xml
+++ b/app/src/main/res/layout/activity_register_scan.xml
@@ -36,11 +36,14 @@
         android:id="@+id/capture_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ছবি তুলুন"
-        android:textAllCaps="false"
         android:layout_above="@id/detect_text_image"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/teal_700"
-        android:layout_margin="10dp"/>
+        android:text="ছবি তুলুন"
+        android:textAllCaps="false" />
 
 
     <Button
