solving registration problem

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -19,19 +19,19 @@
         android:gravity="center"/>
 
     <EditText
-        android:id="@+id/phone"
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/signin"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
         android:background="#30ffffff"
-        android:drawableLeft="@drawable/ic_baseline_local_phone_24"
-        android:drawablePadding="15dp"
-        android:hint="মোবাইল নাম্বার"
-        android:inputType="phone"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawablePadding="5dp"
+        android:hint="ই-মেইল অ্যাকাউন্ট"
+        android:inputType="text"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
@@ -41,7 +41,7 @@
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/phone"
+        android:layout_below="@id/email"
         android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="24dp"
